// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Stepper /> Snapshots should match snapshot with first step active 1`] = `
.c5 {
  width: 15px;
  height: 15px;
  border-radius: 9999px;
}

.c7 {
  width: 95px;
  font-size: 12px;
  font-weight: 700;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c3 {
  position: relative;
  width: 15px;
  text-align: center;
}

.c3 .c6 {
  position: absolute;
  left: 50%;
  top: 10px;
  color: #F46152;
}

.c3 .c4 {
  position: absolute;
  top: -10px;
  background-color: #F46152;
}

.c8 {
  position: relative;
  width: 15px;
  text-align: center;
}

.c8 .c6 {
  position: absolute;
  left: 50%;
  top: 10px;
  color: #9898A6;
}

.c8 .c4 {
  position: absolute;
  top: -10px;
  background-color: #DBDBE8;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  width: 100%;
  height: 4px;
  background-color: #DBDBE8;
}

.c1:after {
  display: block;
  content: '';
  width: 0%;
  height: 4px;
  background-color: #F46152;
  -webkit-transition: width 0.3s;
  transition: width 0.3s;
}

.c0 {
  width: 100%;
  height: 46px;
  padding: 0 40px;
}

.c9 {
  width: 100%;
}

<div>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1"
      />
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4 c5"
          />
          <span
            class="c6 c7"
          >
            step one
          </span>
        </div>
        <div
          class="c8"
        >
          <div
            class="c4 c5"
          />
          <span
            class="c6 c7"
          >
            step two
          </span>
        </div>
        <div
          class="c8"
        >
          <div
            class="c4 c5"
          />
          <span
            class="c6 c7"
          >
            step three
          </span>
        </div>
      </div>
    </div>
    <div
      class="c9"
      label="step one"
    >
      step one content
    </div>
  </div>
</div>
`;

exports[`<Stepper /> Snapshots should match snapshot with second step active 1`] = `
.c5 {
  width: 15px;
  height: 15px;
  border-radius: 9999px;
}

.c7 {
  width: 95px;
  font-size: 12px;
  font-weight: 700;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c3 {
  position: relative;
  width: 15px;
  text-align: center;
}

.c3 .c6 {
  position: absolute;
  left: 50%;
  top: 10px;
  color: #F46152;
}

.c3 .c4 {
  position: absolute;
  top: -10px;
  background-color: #F46152;
}

.c8 {
  position: relative;
  width: 15px;
  text-align: center;
}

.c8 .c6 {
  position: absolute;
  left: 50%;
  top: 10px;
  color: #9898A6;
}

.c8 .c4 {
  position: absolute;
  top: -10px;
  background-color: #DBDBE8;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  width: 100%;
  height: 4px;
  background-color: #DBDBE8;
}

.c1:after {
  display: block;
  content: '';
  width: 50%;
  height: 4px;
  background-color: #F46152;
  -webkit-transition: width 0.3s;
  transition: width 0.3s;
}

.c0 {
  width: 100%;
  height: 46px;
  padding: 0 40px;
}

.c9 {
  width: 100%;
}

<div>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1"
      />
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4 c5"
          />
          <span
            class="c6 c7"
          >
            step one
          </span>
        </div>
        <div
          class="c3"
        >
          <div
            class="c4 c5"
          />
          <span
            class="c6 c7"
          >
            step two
          </span>
        </div>
        <div
          class="c8"
        >
          <div
            class="c4 c5"
          />
          <span
            class="c6 c7"
          >
            step three
          </span>
        </div>
      </div>
    </div>
    <div
      class="c9"
      label="step two"
    >
      step two content
    </div>
  </div>
</div>
`;
